# syslog-ng-old

./: configure.ac
debian/: changelog
lib/: Makefile.am  misc.c  misc.h  nvcontainer.c  nvcontainer.h  nvtable-serialize.c  rcptid.c  rcptid.h  state.c  state.h  stringutils.c  stringutils.h  versioning.h
lib/tests/: test_stringutils.c
libtest/: assert-pipe.c  assert-pipe.h
modules/affile/: affile-common.c  affile-common.h  affile-dest.c  affile-source.c  filemonitor.c
modules/affile/tests/: Makefile.am  test_resolve_path.c
modules/system-source/: system-source.c
tests/unit/: test_rcptid.c
